# RUATeamAndroidProject

./: README.md  build.gradle  gradle.properties  import-summary.txt  opencvgradle.bak  settings.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/opencv2/: aruco.hpp  calib3d.hpp  ccalib.hpp  core.hpp  cvconfig.h  face.hpp  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  optflow.hpp  photo.hpp  stereo.hpp  stitching.hpp  superres.hpp  videoio.hpp  xfeatures2d.hpp
app/src/main/cpp/include/opencv2/aruco/: charuco.hpp  dictionary.hpp
app/src/main/cpp/include/opencv2/bioinspired/: retina.hpp  retinafasttonemapping.hpp  transientareassegmentationmodule.hpp
app/src/main/cpp/include/opencv2/ccalib/: omnidir.hpp
app/src/main/cpp/include/opencv2/core/: base.hpp  check.hpp  core_c.h  cuda.hpp  cuda_types.hpp  cv_cpu_dispatch.h  cvdef.h  cvstd.inl.hpp  eigen.hpp  fast_math.hpp  mat.hpp  mat.inl.hpp  matx.hpp  ocl.hpp  opengl.hpp  operations.hpp  optim.hpp  persistence.hpp  ptr.inl.hpp  saturate.hpp  types.hpp  types_c.h  utility.hpp  va_intel.hpp
app/src/main/cpp/include/opencv2/datasets/: track_alov.hpp
app/src/main/cpp/include/opencv2/dnn/: all_layers.hpp  dict.hpp  dnn.hpp  dnn.inl.hpp  layer.details.hpp  layer.hpp  shape_utils.hpp
app/src/main/cpp/include/opencv2/face/: bif.hpp  face_alignment.hpp  facemark.hpp  facemarkAAM.hpp  facemarkLBF.hpp  facemark_train.hpp  facerec.hpp  mace.hpp  predict_collector.hpp
app/src/main/cpp/include/opencv2/flann/: any.h  autotuned_index.h  defines.h  (+12 more)
(+137 files in other folders)
